Add favicon to BridgeDB's web UI.
This fixes <https://bugs.torproject.org/19774>.

--- a/bridgedb/distributors/https/templates/base.html
+++ b/bridgedb/distributors/https/templates/base.html
@@ -13,6 +13,7 @@
     <meta name="description" content="Tor Bridges">
     <meta name="author" content="The Tor Project">
 
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
